Remove the not using variables and methods && add some comment